# llm-eval-harness

./: .env.example  .gitignore  README.md  pyproject.toml
data/: support_intents.jsonl
src/llmeval/: __init__.py  config.py  dataset.py  harness.py  metrics.py  predictors.py  report.py  run.py
tests/: test_dataset.py  test_metrics.py  test_predictors.py
